--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,2 +1,138 @@
 @import '_variables';
+.app-content {
+	padding: 0 40px 0 20px;
+}
+.card-img--rounded {
+	border-radius: 20px !important;
+}
+.card--no-border {
+	border: none !important;
+}
 
+a {
+	color: $main-color;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+.card-body--padding {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.card-title {
+	font-size: 18px;
+}
+
+.card-info {
+	color: #666;
+	font-size: 14px;
+}
+
+.btn-courses {
+	background-color: #fff;
+	border-color: #fff;
+	color: #000;
+	left: 50%;
+	opacity: 0;
+	position: absolute;
+	top: 60%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	transition: all 0.3s ease 0s;
+	visibility: hidden;
+	z-index: 1;
+	border-radius: 20px;
+}
+
+.courses__link {
+	position: relative;
+}
+.courses__link:hover::after {
+	visibility: visible;
+	opacity: 1;
+}
+
+.courses__link:hover .btn-courses {
+	visibility: visible;
+	opacity: 1;
+	top: 50%;
+}
+
+.courses__link::after {
+	background-color: rgba(0, 0, 0, 0.5);
+	content: '';
+	inset: 0;
+	opacity: 0;
+	position: absolute;
+	transition: all 0.3s ease 0s;
+	visibility: hidden;
+	border-radius: 20px;
+}
+
+.navbar-logo {
+	border-radius: 8px;
+	flex-shrink: 0;
+	height: 38px;
+	object-fit: contain;
+	width: 38px;
+}
+.btn {
+	font-size: 14px !important;
+	padding-left: 15px;
+	padding-right: 15px;
+	border: none;
+}
+.btn-primary {
+	background-color: $primary-color;
+}
+
+.btn-rounded {
+	border-radius: 20px;
+}
+
+.navbar-login {
+	background-color: $primary-color;
+	border-radius: 20px;
+	padding: 5px 15px;
+	font-weight: 600;
+	color: #fff !important;
+	font-size: 16px;
+}
+
+.course-box {
+	display: block;
+	background-color: #f1f1f1;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-right: 20px;
+}
+.course-box > p {
+	text-align: center;
+}
+
+.btn-resgiter {
+	display: block !important;
+	margin: 0 auto;
+}
+
+.course-overview {
+	list-style: none;
+	margin-top: 20px;
+}
+.course-overview__item {
+	display: block;
+}
+.course-overview__item p {
+	display: inline;
+	margin-left: 5px;
+	font-size: 14px;
+}
+
+.text-primary {
+	color: $primary-color;
+	font-weight: 300;
+	font-size: 20px;
+}
