--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,17 +1,35 @@
-<div class='mt-4'>
-	<div class='row'>
-		{{#each courses}}
-			<div class='col-sm-6 col-lg-4'>
-				<div class='card mt-4'>
-					<img class='card-img-top' src='{{this.image}}' alt='{{this.name}}' />
-					<div class='card-body'>
-						<h5 class='card-title'>{{this.name}}</h5>
-						<p class='card-text'>{{this.description}}</p>
-						<a href='#' class='btn btn-primary'>Mua khóa học</a>
+<div class='row'>
+	<div class='col-xl-1'>
+		sidebar
+	</div>
+	<div class='col xl-11'>
+		<div class='row'>
+			{{#each courses}}
+				<div class='col-sm-6 col-lg-4'>
+					<div class='card mt-4 card--no-border'>
+						<a href='/courses/{{this.slug}}' class='courses__link'>
+							<img
+								class='card-img-top card-img--rounded'
+								src='{{this.image}}'
+								alt='{{this.name}}'
+							/>
+							<button class='btn-courses btn btn-light'>Xem khóa học</button>
+						</a>
+						<div class='card-body card-body--padding'>
+							<h5 class='card-title'>
+								<a href='/courses/{{this.slug}}'>
+									{{this.name}}
+								</a>
+							</h5>
+							<div class='card-info'>
+								<i class='fa-solid fa-users'></i>
+								<span class='ml-1'>{{this.users}}</span>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		{{/each}}
+			{{/each}}
+		</div>
 	</div>
 
 </div>
