--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,29 +1,43 @@
-<nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
-	<a class='navbar-brand' href='/'>Nodejs Courses</a>
-	<button
-		class='navbar-toggler'
-		type='button'
-		data-toggle='collapse'
-		data-target='#navbarSupportedContent'
-		aria-controls='navbarSupportedContent'
-		aria-expanded='false'
-		aria-label='Toggle navigation'
-	>
-		<span class='navbar-toggler-icon'></span>
-	</button>
+<head class='header'>
+	<nav class='navbar navbar-expand-lg navbar-dark bg-light'>
+		<a class='navbar-brand' href='/'>
+			<img
+				src='https://static.fullstack.edu.vn/static/media/f8-icon.18cd71cfcfa33566a22b.png'
+				alt='logo f8'
+				class='navbar-logo'
+			/>
+		</a>
 
-	<div class='collapse navbar-collapse' id='navbarSupportedContent'>
-		<ul class='navbar-nav mr-auto'>
-			<li class='nav-item active'>
-				<a class='nav-link' href='/'>Home
-					<span class='sr-only'>(current)</span></a>
-			</li>
-			<li class='nav-item'>
-				<a class='nav-link' href='/news'>News</a>
-			</li>
+		<div class='collapse navbar-collapse' id='navbarSupportedContent'>
+			<ul class='navbar-nav col-xl-4'>
+				<li class='nav-item active'>
+					<span class='navbar-slogan font-weight-bold'>Học Lập Trình Để Đi Làm</span>
+					{{! <a class='nav-link' href='/'>Home
+						<span class='sr-only'>(current)</span></a> }}
+				</li>
+				{{! <li class='nav-item'>
+					<a class='nav-link' href='/news'>News</a>
+				</li> }}
 
-		</ul>
+			</ul>
+			<div class='col-xl-4 mr-auto'>
+				<form class='form-inline my-2 my-lg-0'>
+					{{! <div class='input-group-prepend'>
+						<i class='fa-solid fa-magnifying-glass'></i>
+					</div> }}
+					<input
+						class='form-control mr-sm-2'
+						type='search'
+						placeholder='Search'
+						aria-label='Search'
+					/>
+				</form>
+			</div>
 
-	</div>
+			<a href="/login" class='navbar-login navbar-login--rounded'>Đăng nhập</a>
 
-</nav>
+		</div>
+
+	</nav>
+
+</head>
