[CRUD] Update & Delete database

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -136,3 +136,30 @@ a:hover {
 	font-weight: 300;
 	font-size: 20px;
 }
+// .course-tool-wrap {
+// 	text-align: center;
+// }
+
+// .btn-course-create {
+// 	display: inline-block;
+// 	padding: 10px;
+// 	border-radius: 50%;
+// 	background-color: rgb(244, 118, 72);
+// }
+
+// .btn-course-create > i {
+// 	color: #fff;
+// }
+
+.btn-create {
+	color: #fff!important;
+	display: inline-block;
+	padding: 10px;
+}
+
+.user-avatar {
+	width: 28px;
+	height: 28px;
+	border-radius: 50%;
+	margin-right: 4px;
+}
