--- a/src/resources/views/courses/show.hbs
+++ b/src/resources/views/courses/show.hbs
@@ -11,7 +11,7 @@
 					</li>
 					<li class='course-overview__item'>
 						<i class='fa-solid fa-gauge-high'></i>
-						<p>Trình độ <span></span></p>
+						<p> {{course.level}}</p>
 					</li>
 					<li class='course-overview__item'>
 						<i class='fa-solid fa-clock'></i>
@@ -24,7 +24,7 @@
 				</ul>
 			</div>
 
-            <div class='course-box mt-4'>
+			<div class='course-box mt-4'>
 				<p class='text-primary'>Miễn phí</p>
 				<button class='btn btn-primary btn-resgiter' type='submit'>Đăng ký học</button>
 				<ul class='course-overview'>
@@ -34,7 +34,7 @@
 					</li>
 					<li class='course-overview__item'>
 						<i class='fa-solid fa-gauge-high'></i>
-						<p>Trình độ <span></span></p>
+						<p> {{course.level}}</p>
 					</li>
 					<li class='course-overview__item'>
 						<i class='fa-solid fa-clock'></i>
@@ -59,7 +59,7 @@
 				allowfullscreen
 			></iframe>
 
-            <p>{{course.description}}</p>
+			<p>{{course.description}}</p>
 		</div>
 	</div>
 </div>
