--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,40 +1,71 @@
 <head class='header'>
 	<nav class='navbar navbar-expand-lg navbar-dark bg-light'>
-		<a class='navbar-brand' href='/'>
-			<img
-				src='https://static.fullstack.edu.vn/static/media/f8-icon.18cd71cfcfa33566a22b.png'
-				alt='logo f8'
-				class='navbar-logo'
-			/>
-		</a>
+		<div class='col-xl-3'>
+			<a class='navbar-brand' href='/'>
+				<img
+					src='https://static.fullstack.edu.vn/static/media/f8-icon.18cd71cfcfa33566a22b.png'
+					alt='logo f8'
+					class='navbar-logo'
+				/>
+			</a>
+			<button
+				class='navbar-toggler'
+				type='button'
+				data-toggle='collapse'
+				data-target='#navbarSupportedContent'
+				aria-controls='navbarSupportedContent'
+				aria-expanded='false'
+				aria-label='Toggle navigation'
+			>
+				<span class='navbar-toggler-icon'></span>
+			</button>
 
-		<div class='collapse navbar-collapse' id='navbarSupportedContent'>
-			<ul class='navbar-nav col-xl-4'>
-				<li class='nav-item active'>
-					<span class='navbar-slogan font-weight-bold'>Học Lập Trình Để Đi Làm</span>
-					{{! <a class='nav-link' href='/'>Home
-						<span class='sr-only'>(current)</span></a> }}
+			<span class='font-weight-bold'>Học lập trình để đi làm</span>
+		</div>
+
+		<div class='collapse navbar-collapse col-xl-9' id='navbarSupportedContent'>
+			<ul class='navbar-nav col-xl-12'>
+				<li class='nav-item col-xl-10'>
+					<form method='GET' action='' class='form-inline my-2 my-lg-0'>
+						<input
+							class='form-control mr-sm-2'
+							type='search'
+							placeholder='Search'
+							aria-label='Search'
+						/>
+						<button class='btn btn-outline-success my-2 my-sm-0' type='submit'>
+							Search
+						</button>
+					</form>
 				</li>
-				{{! <li class='nav-item'>
-					<a class='nav-link' href='/news'>News</a>
-				</li> }}
+				<li class='nav-item dropdown col-xl-2 text-right'>
+					<a
+						class='nav-link dropdown-toggle'
+						href='#'
+						id='navbarDropdown'
+						role='button'
+						data-toggle='dropdown'
+						aria-haspopup='true'
+						aria-expanded='false'
+					>
+						<img
+							src='https://files.fullstack.edu.vn/f8-prod/user_avatars/161431/62fe001654d7d.jpg'
+							alt=''
+							class='user-avatar'
+						/>
+						Aurora Do
+					</a>
+					<div class='dropdown-menu' aria-labelledby='navbarDropdown'>
+						<a class='dropdown-item' href='/courses/create'>Đăng khóa học</a>
+						<div class='dropdown-divider'></div>
+						<a class='dropdown-item' href='/me/stored/courses'>Khóa học của tôi</a>
+						<a class='dropdown-item' href='/me/stored/news'>Bài viết của tôi</a>
+						<div class='dropdown-divider'></div>
+						<a class='dropdown-item' href='#'>Đăng xuất</a>
+					</div>
+				</li>
 
 			</ul>
-			<div class='col-xl-4 mr-auto'>
-				<form class='form-inline my-2 my-lg-0'>
-					{{! <div class='input-group-prepend'>
-						<i class='fa-solid fa-magnifying-glass'></i>
-					</div> }}
-					<input
-						class='form-control mr-sm-2'
-						type='search'
-						placeholder='Search'
-						aria-label='Search'
-					/>
-				</form>
-			</div>
-
-			<a href="/login" class='navbar-login navbar-login--rounded'>Đăng nhập</a>
 
 		</div>
 
