--- a/src/resources/views/courses/create.hbs
+++ b/src/resources/views/courses/create.hbs
@@ -1,4 +1,10 @@
 <div class='mt-4'>
+	<div class=''>
+		<a href='/me/stored/courses' class='btn btn-info btn-create mb-3'>
+			<i class='fa-solid fa-arrow-left-long'></i>
+			Quay lại
+		</a>
+	</div>
 	<h3>Đăng khóa học</h3>
 
 	<form method='POST' action='/courses/store'>
