--- a/src/resources/views/me/trash_courses.hbs
+++ b/src/resources/views/me/trash_courses.hbs
@@ -1,29 +1,12 @@
 <div class='container mt-4'>
 
-	<div class='d-flex'>
-		<h2 class='mb-3 d-inline'>Khóa học của tôi</h2>
-
-		<div class='ml-auto'>
-			<a href='/courses/create' class='btn btn-success btn-create mb-3'>
-				<i class='fa-solid fa-plus'></i>
-				Thêm khóa học
-			</a>
-			<a href='/me/trash/courses' class='btn btn-danger btn-trash mb-3'>
-				<i class='fa-solid fa-trash'></i>
-				Thùng rác
-				<span>({{deletedCount}})</span>
-			</a>
-		</div>
+	<div class=''>
+		<a href='/me/stored/courses' class='btn btn-info btn-create mb-3'>
+			<i class='fa-solid fa-arrow-left-long'></i>
+			Quay lại
+		</a>
 	</div>
-
-	<div class='mt-4'>
-		<div class='form-check'>
-			<input class='form-check-input' type='checkbox' value='' id='defaultCheck1' />
-			<label class='form-check-label' for='defaultCheck1'>
-				Chọn tất cả
-			</label>
-		</div>
-	</div>
+	<h2 class='mb-3'>Khóa học của tôi</h2>
 
 	<table class='table'>
 		<thead>
@@ -31,7 +14,7 @@
 				<th scope='col'>#</th>
 				<th scope='col'>Tên khóa học</th>
 				<th scope='col'>Trình độ</th>
-				<th scope='col'>Thời gian tạo</th>
+				<th scope='col'>Thời gian xóa</th>
 				<th></th>
 			</tr>
 		</thead>
@@ -42,9 +25,9 @@
 					{{! use helper increate index }}
 					<td>{{this.name}}</td>
 					<td>{{this.level}}</td>
-					<td>{{this.createdAt}}</td>
+					<td>{{this.deletedAt}}</td>
 					<td>
-						<a href='/courses/{{this._id}}/edit' class='btn btn-info text-white'>Sửa</a>
+						<a href='' class='btn btn-info text-white btn-restore' data-id="{{this._id}}">Khôi phục</a>
 						<!-- Button trigger modal -->
 						<button
 							type='button'
@@ -53,7 +36,7 @@
 							data-target='#delete-course-modal'
 							data-id='{{this._id}}'
 						>
-							Xóa
+							Xóa vĩnh viễn
 						</button>
 
 						<!-- Modal -->
@@ -79,7 +62,7 @@
 										</button>
 									</div>
 									<div class='modal-body'>
-										Bạn có chắc chắn muốn xóa khóa học không ?
+										Hành động này không thể khôi phục. Bạn vẫn muốn xóa khóa học này?
 									</div>
 									<div class='modal-footer'>
 										<button
@@ -102,22 +85,41 @@
 			{{else}}
 				<tr>
 					<td colspan='5' class='text-center'>
-						Bạn chưa đăng khóa học nào.
-						<a href='/courses/create'>Đăng khóa học</a>
+						Thùng rác trống.
+						<a href='/me/stored/courses'>Danh sách khóa học</a>
 					</td>
 				</tr>
 			{{/each}}
 		</tbody>
 	</table>
 </div>
-{{! Delete hidden form }}
+
 <form method='POST' name='delete-course-form'></form>
+<form method='POST' name='restore-course-form'></form>
 
 <script>
-	document.addEventListener("DOMContentLoaded",function(e) { var courseId; var deleteForm =
-	document.forms["delete-course-form"]; // when dialog confirm clicked
-	$('#delete-course-modal').on('show.bs.modal', function (event) { var button =
-	$(event.relatedTarget) ; courseId = button.data('id') ; }); var btnDeleteCourse =
-	document.getElementById("btn-delete-course"); btnDeleteCourse.onclick = function (event) {
-	deleteForm.action = `/courses/${courseId}?_method=DELETE`; deleteForm.submit(); } });
+	document.addEventListener("DOMContentLoaded",function(e) { 
+		var courseId; 
+		var deleteForm = document.forms["delete-course-form"]; 
+		var restoreForm = document.forms["restore-course-form"]; 
+
+		var btnRestore = $('.btn-restore'); 
+		// when dialog confirm clicked 
+		$('#delete-course-modal').on('show.bs.modal', function (event) { 
+			var button = $(event.relatedTarget) ; 
+			courseId = button.data('id') ; 
+		}); 
+
+		var btnDeleteCourse = document.getElementById("btn-delete-course"); 
+		btnDeleteCourse.onclick = function (event) {
+			deleteForm.action = `/courses/${courseId}/force?_method=DELETE`; 
+			deleteForm.submit();
+		}
+		btnRestore.click(function (event){
+			event.preventDefault();
+			var courseId =$(this).data('id');
+			restoreForm.action = `/courses/${courseId}/restore?_method=PATCH`; 
+			restoreForm.submit();
+		})
+	});
 </script>
